<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/rectangle"
    android:layoutDirection="rtl"

    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="@drawable/oval"
        app:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/bg_main">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_main"
                android:minHeight="20dp"
                android:theme="?attr/windowNoTitle"
                android:paddingTop="16dp"
                android:gravity="center"
                app:buttonGravity="center_vertical"
                >
                <TextView
                    android:drawablePadding="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/almarai_extrabold"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/quran" />
            </androidx.appcompat.widget.Toolbar>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/say"
                    android:textStyle="bold"
                    android:fontFamily="@font/almarai_extrabold"
                    android:textSize="12sp"

                    />
                <TextView
                    android:fontFamily="@font/almarai_extrabold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aeah"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="#6876fa"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/main_btn_morning"
        style="@style/btn"

        android:background="@drawable/bg_morning"
        android:fontFamily="@font/almarai_extrabold"
        android:text="@string/morning"
        app:drawableLeftCompat="@drawable/ico_sun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/main_btn_evening"
        style="@style/btn"
        android:background="@drawable/bg_evening"
        android:text="@string/evening"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_morning"
        app:layout_constraintVertical_bias="0.151"
        app:drawableLeftCompat="@drawable/ico_moon" />

</androidx.constraintlayout.widget.ConstraintLayout>