<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_main"
        android:foreground="@drawable/oval"
        app:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="10dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingRight="10dp"
            android:paddingBottom="4dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:background="@color/bg_main"
                android:gravity="center"
                android:minHeight="20dp"
                android:theme="?attr/actionBarTheme" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
             <!--   <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spaces"
                    android:textStyle="bold"
                    android:textSize="50sp"
                    />-->
                <ImageView
                    android:id="@+id/section_btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back_arrow"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/back" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spaces"
                    android:textStyle="bold"
                    android:textSize="1sp"
                    tools:ignore="SmallSp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    app:drawableStartCompat="@drawable/quran" />

                <ImageView
                    android:id="@+id/section_iv_icon_evening_or_morning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/evening_moon"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:contentDescription="@string/evening"
                    android:layout_marginLeft="-15dp"
                    android:layout_marginRight="25dp"

                    />


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/almarai_extrabold"
                android:gravity="center_vertical"
                android:text="@string/say"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/almarai_extrabold"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/aeah"
                android:textColor="#6876fa"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ProgressBar

                android:id="@+id/progress_adhkar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:progress="0" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle"

        tools:context=".SectionsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/section_mainTextView_evening_or_morning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/evening"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="@font/almarai_extrabold"
                android:gravity="center"
                android:paddingTop="10dp"
                android:textColor="@color/textColor"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="50dp"
                android:layout_marginHorizontal="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="8dp"
                android:weightSum="2"
                android:baselineAligned="false">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    >

                    <TextView
                        android:id="@+id/section_btn_istiaah_and_basmalah"
                        style="@style/btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="3dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/bg_evening"
                        android:gravity="center"
                        android:padding="20dp"

                        android:text="@string/istiaah_and_basmalah."
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/section_counter_istiaah_and_basmalah"
                        style="@style/counter"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="13dp"
                        android:text=""/>
                </FrameLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"

                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginLeft="8dp">

                        <TextView
                            android:id="@+id/section_btn_evening_morning"
                            style="@style/btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/bg_blue"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/evening_morning"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/section_counter_evening_morning"
                            style="@style/counter"
                            android:layout_marginTop="0dp"
                            android:layout_marginRight="10dp"
                            android:text="" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginLeft="8dp">

                        <TextView
                            android:id="@+id/section_btn_quran"
                            style="@style/btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/bg_morning"
                            android:gravity="center"
                            android:padding="20dp"
                            android:text="@string/quran"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/section_counter_quran"
                            style="@style/counter"
                            android:layout_marginTop="4dp"
                            android:layout_marginRight="10dp"
                            android:text="" />
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/almarai_extrabold"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/aeah2"
                android:textColor="@color/blackTransparent" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="50dp"
                android:columnCount="2"
                android:orientation="vertical"

                android:rowCount="2">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/section_btn_no_god_except_Allah"
                        style="@style/btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/bg_morning"

                        android:gravity="center"

                        android:padding="20dp"

                        android:text="@string/no_god_except_Allah"

                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/section_counter_no_god_except_Allah"
                        style="@style/counter"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="10dp"
                        android:text="" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/section_btn_threes"
                            style="@style/btn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="4dp"
                            android:background="@drawable/bg_blue"
                            android:foreground="?android:attr/selectableItemBackgroundBorderless"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/threes"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/section_counter_threes"
                            style="@style/counter"
                            android:layout_marginTop="0dp"
                            android:layout_marginRight="10dp"
                            android:text="" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/section_btn_god_you_are_my_Lord"
                            style="@style/btn"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/bg_evening"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/god_you_are_my_Lord" />

                        <TextView
                            android:id="@+id/section_counter_god_you_are_my_Lord"
                            style="@style/counter"
                            android:layout_marginTop="0dp"
                            android:layout_marginRight="10dp"
                            android:text="" />
                    </FrameLayout>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/almarai_extrabold"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/aeah3"
                android:textColor="@color/blackTransparent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="50dp"
                android:columnCount="2"
                android:gravity="center"
                android:padding="8dp"
                android:rowCount="2">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/section_btn_mohammed_is_messenger_of_allah"
                        style="@style/btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="4dp"
                        android:background="@drawable/bg_green"
                        android:gravity="center"
                        android:padding="10dp"

                        android:text="@string/Mohammad_is_the_messenger_of_Allah"
                        android:textSize="16sp"

                        />

                    <TextView
                        android:id="@+id/section_counter_mohammed_is_messenger_of_allah"
                        style="@style/counter"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="10dp"
                        android:text="" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/section_btn_generic"
                        style="@style/btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_morning"
                        android:padding="10dp"

                        android:text="@string/generic"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/section_counter_generic"
                        style="@style/counter"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="10dp"
                        android:text="" />

                </FrameLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
